# sewing_planner_apple_app

./: .gitignore  .swift-format  Sewing Planner.xctestplan  Sewing-Planner-Info.plist  modelDesign.md  notes.md  project.d2
.serena/: project.yml
.serena/memories/: architecture_and_patterns.md  code_style_and_conventions.md  dependencies_and_resources.md  development_guidelines.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
ReceiveImage/: Info.plist  ReceiveImageDebug.entitlements  ReceiveImageView.swift  ShareViewController.swift
Sewing Planner/: AddStepView.swift  AppButtonStyles.swift  AppDatabase.swift  AppFiles.swift  ContentView.swift  ImageSketchesView.swift  ItemView.swift  MaterialList.swift  MaterialListItem.swift  NewProjectView.swift  PrimaryButton.swift  PrimaryTextField.swift  ProjectDetailData.swift  ProjectDetails.swift  ProjectName.swift  ProjectStep.swift  ProjectStepView.swift  ProjectStepsView.swift  ProjectView.swift  ProjectsView.swift  SectionView.swift  Sewing PlannerDebug.entitlements  Sewing_Planner.entitlements  Sewing_PlannerApp.swift  TimestampedRecord.swift  UnfinishedSteps.swift
Sewing Planner.xcodeproj/: project.pbxproj
Sewing Planner.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
Sewing Planner.xcodeproj/project.xcworkspace/xcuserdata/art.xcuserdatad/: UserInterfaceState.xcuserstate
Sewing Planner.xcodeproj/xcshareddata/xcschemes/: ReceiveImage.xcscheme  Sewing Planner.xcscheme
Sewing Planner.xcodeproj/xcuserdata/art.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Sewing Planner.xcodeproj/xcuserdata/art.xcuserdatad/xcschemes/: xcschememanagement.plist
Sewing Planner/AllProjectsScreen/: ProjectsView.swift
Sewing Planner/Assets.xcassets/black_dress_sketch.imageset/: Contents.json
Sewing Planner/Assets.xcassets/vecteezy_crossed-sewing-needles-with-thread-silhouette_.imageset/: Contents.json
Sewing Planner/Assets.xcassets/vecteezy_sewing-machine-icon-style_8737393.imageset/: Contents.json
Sewing Planner/ProjectScreen/: NewProjectView.swift  ProjectStep.swift  ProjectStepsView.swift
Sewing Planner/Src/: axisScaleTransition.swift
Sewing Planner/Src/AppLibraries/: AppDatabase.swift  AppFiles.swift  AppLogger.swift  color.swift
Sewing Planner/Src/AppLibraries/AppSettings/: AppSettings.swift  UserSettings.swift
Sewing Planner/Src/AppParentViews/: ContentView.swift  ReceiveImageApp.swift  Sewing_PlannerApp.swift
Sewing Planner/Src/AppSettings/: AppSettings.swift  UserSettings.swift
Sewing Planner/Src/Project/Details/Models/: ProjectMetadataModel.swift  SectionModel.swift
Sewing Planner/Src/Project/Details/ViewModels/: ProjectMetadataViewModel.swift  SectionItemViewModel.swift  SectionViewModel.swift
Sewing Planner/Src/Project/Details/Views/: AddItemView.swift  ItemView.swift  ProjectDetails.swift  ProjectDetailsView.swift  ProjectName.swift  ProjectTitle.swift  SectionView.swift  UpdateItemView.swift
Sewing Planner/Src/Project/Images/Models/: ImageModel.swift
Sewing Planner/Src/Project/Images/ViewModels/: ImageViewModel.swift
Sewing Planner/Src/Project/Images/Views/: ImageSketchesView.swift  ImagesView.swift
Sewing Planner/Src/Project/ViewModels/: ProjectDataViewModel.swift
Sewing Planner/Src/Project/Views/: ProjectView.swift  Toast.swift
Sewing Planner/Src/ProjectsDisplay/ViewModels/: ProjectDisplayViewModel.swift
Sewing Planner/Src/ProjectsDisplay/Views/: ProjectsView.swift
Sewing Planner/Src/Store/: Store.swift
Sewing Planner/Src/Styling/: AppButtonStyles.swift  PrimaryButton.swift  PrimaryTextField.swift
Sewing Planner/Src/Utils/: UIImageExtension.swift
Sewing PlannerTests/: DatabaseTest.swift  Sewing_PlannerTests.swift
Sewing PlannerUITests/: AllProjectsScreenTests.swift  NewProjectViewTest.swift  Sewing_PlannerUITests.swift  Sewing_PlannerUITestsLaunchTests.swift
Sewing PlannerUnitTests/: AppSettingsTest.swift  DatabaseTest.swift  Sewing_PlannerUnitTests.swift  TestEffects.swift
SharedExtensionFiles/: Persistence.swift
sync_server/: Cargo.toml  diesel.toml  sessions.db
sync_server/.serena/: project.yml
sync_server/.serena/memories/: api_endpoints_and_data_models.md  code_style_and_conventions.md  codebase_structure.md  design_patterns_and_guidelines.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
sync_server/api/: Cargo.toml
sync_server/api/src/: db.rs  events.rs  lib.rs
sync_server/app_db/: Cargo.toml  diesel.toml
sync_server/app_db/migrations/2025-11-24-014319_create_users/: up.sql
sync_server/app_db/migrations/2025-11-27-150548-0000_create_projects/: up.sql
sync_server/app_db/src/: schema.rs
sync_server/auth_utils/: Cargo.toml
sync_server/auth_utils/src/: lib.rs
sync_server/event_database/: Cargo.toml
sync_server/event_database/src/: lib.rs
sync_server/migrations/2025-11-23-190921_create_sessions/: up.sql
sync_server/migrations/2025-11-24-014319_create_users/: up.sql
sync_server/migrations/2025-11-27-150548-0000_create_projects/: down.sql
sync_server/sqlite_session_store/: Cargo.toml  diesel.toml
sync_server/sqlite_session_store/migrations/2025-11-23-190921_create_sessions/: up.sql
sync_server/sqlite_session_store/src/: lib.rs  schema.rs
sync_server/src/: api.rs  db.rs  events.rs  main.rs  schema.rs  sqlite_session_store.rs
website/: package-lock.json  package.json
website/src/components/: Footer.astro  Navbar.astro
website/src/layouts/: GeneralLayout.astro
website/src/pages/: index.astro  privacy-policy.astro
