[package]
name = "sync_server"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["auth_utils","sqlite_session_store"]

[workspace.dependencies]
actix-session = "0.11.0"
actix-web = "4"
anyhow = "1.0.100"
async-lock = "3.4.1"
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "postgres_backend"] }
diesel-async = { version = "0.7.0", features = ["postgres", "sync-connection-wrapper"] }
libsqlite3-sys = { version = "0.35", features = ["bundled"] }
serde = "1.0.228"
serde_json = "1.0.145"
email_address = "0.2.9"
chrono = "0.4"
argon2 = { version = "0.5.3", features = ["std"] }
snafu = { version = "0.8.9", features = ["rust_1_81", "alloc"] }

[dependencies]
sqlite_session_store = { path = "./sqlite_session_store" }
auth_utils = { path = "./auth_utils" }
actix-session = { workspace = true }
actix-web = { workspace = true }
anyhow = { workspace = true }
async-lock = { workspace = true }
diesel = { workspace = true, features = ["postgres_backend"] }
diesel-async = { workspace = true, features = ["postgres", "sync-connection-wrapper", "pool", "deadpool"] }
serde = { workspace = true }
serde_json = { workspace = true }
argon2 = { workspace = true }
snafu = { workspace = true, features = ["rust_1_81", "alloc"] }

email_address = "0.2.9"
