[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
auth_utils = { workspace = true }
app_db = { workspace = true }
event_database = { workspace = true }

actix-session = { workspace = true }
actix-web = { workspace = true }
actix-ws = { workspace = true }
futures-util = { workspace = true }
diesel = { workspace = true, features = ["postgres_backend", "chrono"] }
diesel-async = { workspace = true, features = ["postgres", "pool", "deadpool"] }
serde = { workspace = true }
serde_json = { workspace = true }
argon2 = { workspace = true }
snafu = { workspace = true, features = ["rust_1_81", "alloc"] }
email_address = "0.2.9"
chrono = { workspace = true, features = ["serde"] }
bytestring = "1.5.0"
uuid = { workspace = true, features = ["v4"] }
