[package]
name = "sqlite_session_store"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-session = { workspace = true }
actix-web = { workspace = true }
anyhow = { workspace = true }
async-lock = { workspace = true }
diesel = { workspace = true, features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono"] }
diesel-async = { workspace = true, features = ["postgres", "sync-connection-wrapper"] }
libsqlite3-sys = { workspace = true, features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
