[package]
name = "sqlite_session_store"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-session = { workspace = true }
actix-web = { workspace = true }
anyhow = { workspace = true }
async-lock = { workspace = true }
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono" ] }
diesel-async = { version = "0.7.0", features = ["sync-connection-wrapper"] }
libsqlite3-sys = { version = "0.35", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }

[dev-dependencies]
tokio ={ version = "1", features = ["macros"] }
